fixed collapseble navbar default state for small screens

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,5 +1,7 @@
 
-
+#navbar-container{
+	max-height: 440px;
+}
 #footer {
 	text-align: center;
 	margin-top: 5%;
